julka hoc na rantke

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -6,6 +6,7 @@ jobs:
     env:
       NODE_ENV: production
       REACT_APP_REDIRECT_URL: https://kurs.knur.club/oauth-flow
+      REACT_APP_API_URL: https://api.knur.club
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
