--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
+    "i18next": "^23.4.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.3",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "sort-by": "^1.2.0",
