--- a/package.json
+++ b/package.json
@@ -3,29 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/joy": "^5.0.0-beta.0",
-    "@mui/material": "^5.14.3",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.39",
-    "@types/react": "^18.2.18",
-    "@types/react-dom": "^18.2.7",
-    "axios": "^1.4.0",
-    "i18next": "^23.4.2",
-    "localforage": "^1.10.0",
-    "match-sorter": "^6.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^13.0.3",
-    "react-router-dom": "^6.14.2",
+    "@emotion/react": "11.11.1",
+    "@emotion/styled": "11.11.0",
+    "@mui/joy": "5.0.0-beta.8",
+    "@mui/material": "5.14.11",
+    "@testing-library/jest-dom": "6.1.3",
+    "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.5.1",
+    "@types/jest": "29.5.5",
+    "@types/node": "20.7.1",
+    "@types/react": "18.2.23",
+    "@types/react-dom": "18.2.8",
+    "axios": "1.5.1",
+    "i18next": "23.5.1",
+    "localforage": "1.10.0",
+    "match-sorter": "6.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-i18next": "13.2.2",
+    "react-router-dom": "6.16.0",
     "react-scripts": "5.0.1",
-    "sort-by": "^1.2.0",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "sort-by": "1.2.0",
+    "typescript": "5.2.2",
+    "web-vitals": "3.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
